third_party/WebKit/Source/WebKit/qt/tests/qdeclarativewebview/resources/webviewtest.qml
@@ -1,0 +1,25 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+import Qt 4.7
+import QtWebKit 1.0
+
+Flickable {
+    id: flick
+    width: 640
+    height: 400
+    clip: true
+    contentWidth: myweb.width; contentHeight: myweb.height
+    property alias myurl: myweb.url
+    property alias prefHeight: myweb.preferredHeight
+    property alias prefWidth: myweb.preferredWidth
+
+    WebView {
+        id: myweb
+        url: "http://qt.nokia.com"
+        smooth: false
+        scale: 1.0
+        preferredHeight: 500
+        preferredWidth: 600
+        pressGrabTime: 1000
+        focus: true
+    }
+}
